--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                <p>Lorem Ipsum is simply dummy test of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dumy text ever since the 1500s, whe an uknown printer took a galley of type and scrambled it to make a type</p> 
                <a class="link-button" target="_blank" href="https://www.programming-hero.com/">Download CV</a>
             </div>
+    </section>        
             <section class="latest-work">
+                <h1 class="align">My Latest Work</h1>
                 <div class="works">
                     <img src="images/work-1.png" alt="">
                 </div>
