worked midle-banner

--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
                     <img src="images/work-3.jpg" alt="">
                 </div>  
             </section>  
-    </section>
+            <section>
+                <h1> What Clients are say</h1>
+                <div>
+                    <h3>Bruce Moccy</h3>
+                    <h6>Founder & CEO Alies</h6>
+                    <p>"Lorem ipsum is simply dummy test of the printing and typesetting industry. Lorem Ipsum</p>
+                    <a class="link-button" href="https://www.programming-hero.com/">Leave me a message in the<br><span>sjotishchandra@gmail.com</span></a>
+                </div>
+            </section>
+    
      
 </body> 
 </html>            
